# code_template

./: README.md  pyproject.toml
template/: main.py
template/conf/: config.yaml
template/conf/dataset/: base_dataset.yaml  local_dataset.yaml  scitas_dataset.yaml
template/conf/hydra/help/: template_help.yaml
template/conf/trainer/: base_trainer.yaml  dummy_trainer.yaml
template/models/: dummy_model.py
template/trainers/: base_trainer.py  dummy_trainer.py
template/utils/: utils.py
