[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Bastien Van Delft <bastienvandelft@epfl.ch>"]
readme = "README.md"
packages = [{include = "template"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
torchvision = "^0.14.1"
numpy = "^1.24.1"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
torchaudio = "^0.13.1"
submitit = "^1.4.5"
Hydra = "^2.5"
clearml = "^1.9.1"
omegaconf = "^2.3.0"
tqdm = "^4.64.1"
tensorboard = "^2.11.2"
wandb = "^0.13.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.10.0"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
jupyterlab = "^3.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
black = "black ."
isort = "isort ."

train-local = "torchrun --standalone --nnodes=1 --nproc_per_node=4 -m template.main dataset=local_dataset trainer=dummy_trainer"

[tool.isort]
profile = "black"
known_first_party = 'neuralmae'
known_third_party = ["torch", "hydra", "pytest"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true


